--- a/services/iotagent.yml
+++ b/services/iotagent.yml
@@ -34,6 +34,9 @@ services:
         tty: true
         deploy:
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
