--- a/services/ngsiproxy.yml
+++ b/services/ngsiproxy.yml
@@ -10,6 +10,9 @@ services:
             - TRUST_PROXY_HEADERS=1
         deploy:
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
