--- a/config/api-umbrella.yml
+++ b/config/api-umbrella.yml
@@ -79,3 +79,8 @@ web:
             authentication: login
             user_name: noreply@umbrella.2019.smartmaas.services
             password: tamp.ere
+
+nginx:
+  proxy_connect_timeout: 120
+  proxy_read_timeout: 300
+  proxy_send_timeout: 120
