--- a/services/ckan.yml
+++ b/services/ckan.yml
@@ -82,6 +82,9 @@ services:
             ckan:
         deploy:
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any        
 
@@ -94,6 +97,9 @@ services:
             datapusher:
         deploy:
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any        
 
@@ -108,6 +114,9 @@ services:
             solr:
         deploy:
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any        
 
@@ -125,6 +134,9 @@ services:
             db:
         deploy:
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any        
 
@@ -137,6 +149,9 @@ services:
             redis:
         deploy:
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any        
 
