--- a/services/iotagent-lora.yml
+++ b/services/iotagent-lora.yml
@@ -25,6 +25,9 @@ services:
         tty: true
         deploy:
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
