--- a/services/keyrock.yml
+++ b/services/keyrock.yml
@@ -11,6 +11,10 @@ services:
         environment:
             - MYSQL_ROOT_PASSWORD=idm
         deploy:
+            replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
@@ -34,6 +38,10 @@ services:
             - SMTP_USER=postmaster@2019.smartmaas.services
             - SMTP_PASS=9b6c37c9ae0f6b1de9a48014684b2e4e-5645b1f9-95dac8ef
         deploy:
+            replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
