--- a/services/nginx.yml
+++ b/services/nginx.yml
@@ -13,6 +13,9 @@ services:
               target: /etc/nginx/nginx.conf
         deploy:
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
