--- a/services/quantumleap.yml
+++ b/services/quantumleap.yml
@@ -3,9 +3,11 @@ version: "3.5"
 services:
 
     quantumleapcrate:
-        image: crate:2.3
+        image: crate:3.1.2
+        #iimage: crate:2.3
             # Admin UI
-            # - "4200:4200"
+        ports:            
+            - "4200:4200"
             # Transport protocol
             # - "4300:4300"
         command: crate  -Clicense.enterprise=false -Cauth.host_based.enabled=false -Ccluster.name=democluster -Chttp.cors.enabled=true -Chttp.cors.allow-origin="*" -Cnetwork.bind_host=0.0.0.0 -Cnetwork.publish_host=_site_
@@ -22,6 +24,9 @@ services:
             - quantumleap
         deploy:
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
@@ -36,21 +41,24 @@ services:
             # Scaling Redis requires some extra work.
             # See https://get-reddie.com/blog/redis4-cluster-docker-compose/
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
     quantumleap:
-        image: smartsdk/quantumleap:0.4
+        image: smartsdk/quantumleap:0.7.5
             # ports
             # "8668:8668"
         depends_on:
             - quantumleapcrate
-        volumes:
-            - /opt/APInf-Cloud-Tampere/config/crate.py:/src/ngsi-timeseries-api/src/translators/crate.py:ro
+              #volumes:
+              #- /opt/APInf-Cloud-Tampere/config/crate.py:/src/ngsi-timeseries-api/src/translators/crate.py:ro
         environment:
             - CRATE_HOST=quantumleapcrate
-            - USE_GEOCODING=False
-            - REDIS_HOST=quantumleap_redis
+            - USE_GEOCODING=True
+              #- REDIS_HOST=quantumleap_redis
         networks:
             quantumleap:
             front:
@@ -63,6 +71,9 @@ services:
                 max-file: "10"
         deploy:
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
