--- a/services/tenant-manager.yml
+++ b/services/tenant-manager.yml
@@ -15,6 +15,10 @@ services:
             - IDM_URL=https://accounts.2019.smartmaas.services
             - UMBRELLA_URL=https://umbrella.2019.smartmaas.services
         deploy:
+            replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
