--- a/services/tokenservice.yml
+++ b/services/tokenservice.yml
@@ -13,6 +13,10 @@ services:
             - TOKEN_SERVICE_CLIENT_ID=6434387e-c2a7-4ef0-829b-4e8465f4f0e4
             - TOKEN_SERVICE_CLIENT_SECRET=4dd63b0f-1e3b-4fea-9445-eb4da48fa9c5
         deploy:
+            replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
