--- a/services/wirecloud.yml
+++ b/services/wirecloud.yml
@@ -5,7 +5,7 @@ services:
     wirecloudnginx:
         image: nginx:latest
         volumes:
-            - /opt/wirecloud-static:/var/www/static:ro
+            - /opt/wirecloud-static-new:/var/www/static:ro
         configs:
             - source: wirecloud_nginx
               target: /etc/nginx/nginx.conf
@@ -16,6 +16,9 @@ services:
             - front
         deploy:
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
@@ -37,35 +40,44 @@ services:
             - wirecloud_memcached
             - wirecloud_postgres
         volumes:
-            - /opt/wirecloud-data:/opt/wirecloud_instance/data
-            - /opt/wirecloud-static:/var/www/static
+            - /opt/wirecloud-data-new:/opt/wirecloud_instance/data
+            - /opt/wirecloud-static-new:/var/www/static
         networks:
             - front
             - wirecloud
         deploy:
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
     wirecloud_elasticsearch:
         image: elasticsearch:2.4
         volumes:
-            - /opt/wirecloud-elasticsearch:/usr/share/elasticsearch/data
+            - /opt/wirecloud-elasticsearch-new:/usr/share/elasticsearch/data
         networks:
             - wirecloud
         deploy:
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
     wirecloud_postgres:
         image: postgres:9.6
         volumes:
-            - /opt/wirecloud-postgres:/var/lib/postgresql/data
+            - /opt/wirecloud-postgres-new:/var/lib/postgresql/data
         networks:
             - wirecloud
         deploy:
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
@@ -78,6 +90,9 @@ services:
             # This is required to fix some connection problems
             endpoint_mode: dnsrr
             replicas: 1
+            placement:
+                constraints:
+                    - node.hostname == 2019-manager
             restart_policy:
                 condition: any
 
