--- a/services/nifi.yml
+++ b/services/nifi.yml
@@ -1,6 +1,6 @@
 version: "3.5"
 
-services:
+services: 
 
   zookeeper:
         image: bitnami/zookeeper:latest
@@ -17,38 +17,26 @@ services:
                 constraints:
                     - node.hostname == 2019
             restart_policy:
-                condition: any
+                condition: any      
 
   nifi:
-        image: apache/nifi:1.10.0
-        #image: sumedhlazy/nifi:latest
+        #image: apache/nifi:1.10.0
+        image: profirator/nifi:1.9.2
         ports:
-          - target: 8080
-            published: 8080
-            protocol: tcp
-            mode: host  
-        environment:
-          - NIFI_WEB_HTTP_HOST=0.0.0.0
-          - NIFI_WEB_HTTP_PORT=8080
-          - NIFI_CLUSTER_IS_NODE=true
-          - NIFI_CLUSTER_NODE_PROTOCOL_PORT=8082
-          - NIFI_ZK_CONNECT_STRING=zookeeper:2181
-          - NIFI_ELECTION_MAX_WAIT=1 min
+          - 8080:8080
+          - 8082:8082
         networks:
             front:
                 aliases:
                   - nifi.docker
             nifi:
-        #volumes:
-          # The version in target should be equal to version of image...version in volumes is imp or the service won't start
-          #- /opt/nifi/nifi-current/templates:/opt/nifi/nifi-current/conf/templates
-          #- /opt/nifi/nifi-current/logs:/opt/nifi/nifi-current/logs
-          #- /opt/nifi/nifi-current/conf:/opt/nifi/nifi-current/conf
-          #- /opt/nifi/nifi-current/database_repository:/opt/nifi/nifi-current/database_repository
-          #- /opt/nifi/nifi-current/flowfile_repository:/opt/nifi/nifi-current/flowfile_repository
-          #- /opt/nifi/nifi-current/content_repository:/opt/nifi/nifi-current/content_repository
-          #- /opt/nifi/nifi-current/provenance_repository:/opt/nifi/nifi-current/provenance_repository
-          #- /opt/nifi/nifi-current/state:/opt/nifi/nifi-current/state
+        volumes:
+          - /opt/nifi/logs:/opt/nifi/logs
+          - /opt/nifi/conf:/opt/nifi/conf
+          - /opt/nifi/flowfile_repository:/opt/nifi/flowfile_repository
+          - /opt/nifi/database_repository:/opt/nifi/database_repository
+          - /opt/nifi/content_repository:/opt/nifi/content_repository
+          - /opt/nifi/provenance_repository:/opt/nifi/provenance_repository            
         deploy:
             replicas: 1
             placement:
@@ -69,7 +57,7 @@ networks:
         driver: overlay
         ipam:
             config:
-                - subnet: 172.57.0.0/16        
+                - subnet: 172.57.0.0/16              
 
     nifi:
         driver: overlay
