--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -166,7 +166,7 @@
 ;admin_password = admin
 
 # used for signing
-;secret_key = SW2YcwTIb9zpOOhoPsMm
+;secret_key = #### REPLACE WITH SECRET ###
 
 # disable gravatar profile images
 ;disable_gravatar = false
