--- a/services/tokenservice.yml
+++ b/services/tokenservice.yml
@@ -10,8 +10,8 @@ services:
             - front
         environment:
             - ACCESS_TOKEN_URL=http://keyrock:3000/oauth2/token
-            - TOKEN_SERVICE_CLIENT_ID=6434387e-c2a7-4ef0-829b-4e8465f4f0e4
-            - TOKEN_SERVICE_CLIENT_SECRET=4dd63b0f-1e3b-4fea-9445-eb4da48fa9c5
+            - TOKEN_SERVICE_CLIENT_ID=### REPLACE WITH CLIENT ID OF KEYROCK ###
+            - TOKEN_SERVICE_CLIENT_SECRET=### REPLACE WITH CLIENT SECRET OF KEYROCK ###
         deploy:
             replicas: 1
             placement:
